--- a/etc/config.json
+++ b/etc/config.json
@@ -1,8 +1,13 @@
 {
   "c_compiler": "gcc",
-  "c++_compiler": "g++",
+  "cpp_compiler": "g++",
   "include_dir": "/usr/local/include/",
   "lib_dir": "/usr/local/lib/",
+  "flags": [
+    "-Wall",
+    "-Wextra"
+  ],
+  "std": 99,
   "clear_before_run": true,
   "libraries": {
     "math": "-lm"
