--- a/etc/config.json
+++ b/etc/config.json
@@ -1,13 +1,11 @@
 {
   "c_compiler": "clang",
   "cpp_compiler": "clang++",
-  "include_dir": "/usr/local/include/zc/",
-  "lib_dir": "/usr/local/lib/zc/",
+  "c_std": "c17",
+  "cpp_std": "c++20",
   "flags": ["-Wall", "-Wextra"],
-  "c_std": "c99",
-  "cpp_std": "c++17",
   "editor": "nvim",
   "clear_before_run": true,
   "auto_keep": true,
-  "open_on_init": false
+  "edit_on_init": true
 }
