fix configuration file and clear before run code

--- a/etc/config.json
+++ b/etc/config.json
@@ -5,7 +5,7 @@
   "cpp_std": "c++20",
   "flags": ["-Wall", "-Wextra"],
   "editor": "nvim",
-  "clear_before_run": true,
-  "auto_keep": true,
+  "clear_before_run": false,
+  "auto_keep": false,
   "edit_on_init": true
 }
