--- a/etc/projects.json
+++ b/etc/projects.json
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "test": "/home/paul/test"
+    "test": {
+      "path": "/home/paul/test",
+      "language": "c"
+    }
   }
 }
